# SorachanCoin-qt

./: .gitignore  COPYING  INSTALL  README.md  SorachanCoin-qt.pro  SorachanCoinQ-qt.pro  SorachanCoinQ-qt.pro.user.064ec45  SorachanCoinQ-qt.pro.user.0e7b49f  SorachanCoinQ-qt.pro.user.afe0b00  autobuild.sh  autoclean.sh  autogen.sh  configure.ac  sora_builder.sh
doc/: Doxyfile  README  README_windows.txt  assets-attribution.txt  build-linux.txt  build-linux_arch.txt  build-linux_centos.txt  build-linux_debian.txt  build-linux_fedora.txt  build-linux_opensuse.txt  build-linux_plamo.txt  build-linux_raspberrypi.txt  build-linux_scientificLinux.txt  build-linux_ubuntu.txt  build-msw.txt  build-osx.txt  build-package.txt  build-unix.txt  build-unix_freebsd.txt  build-unix_freebsd_clang.txt  build-unix_netbsd.txt  build-unix_netbsd_clang.txt  build-unix_openbsd.txt  build-unix_openbsd_clang.txt
src/: Makefile  Makefile.am.library  Makefile.am.pac  Makefile.am.sqlite  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.h  base58.cpp  base58.h  bignum.h  bitcoinrpc.cpp  bitcoinrpc.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  compat.h  crypter.cpp  crypter.h  cryptogram.cpp  db.cpp  db.h  db_addr.cpp  db_addr.h  ecies.cpp  hash.h  ies.h  init.cpp  init.h  ipcollector.cpp  ipcollector.h  irc.cpp  irc.h  kernel.cpp  kernel.h  kernel_worker.cpp  kernel_worker.h  (+66 more)
src/Lyra2RE/: Lyra2RE.c  Sponge.c  blake.c  bmw.c  cubehash.c  groestl.c  keccak.c  skein.c  sph_blake.h  sph_bmw.h  sph_cubehash.h  sph_groestl.h  sph_keccak.h  sph_skein.h  sph_types.h
src/PoBench/: pob_challenge.cpp  pob_plot.cpp  (+4 more)
winpthreads/: config.h  config.status  configure.ac  libtool
(+440 files in other folders)
